# a

./: .replit  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
artifacts/vertex-proxy/: .gitignore  README.md  main.py  requirements.txt
artifacts/vertex-proxy/.replit-artifact/: artifact.toml
artifacts/vertex-proxy/config/: active_node.json  api_keys.txt  cached_nodes.json  config.json  custom_nodes.json  models.json  sub_urls.json
artifacts/vertex-proxy/errors/2026-04-18/oai_nonstream_RateLimitError_160030_809062/: 1_downstream_request.json  2_upstream_request.json  summary.json
artifacts/vertex-proxy/proxy_manager/: country_detect.py  proxy_state.py  routes.py  subscription.py  xray_manager.py
artifacts/vertex-proxy/src/: __init__.py
artifacts/vertex-proxy/src/api/: __init__.py  admin.py  model_config.py  network.py  openai_compat.py  routes.py  transform.py  vertex_client.py
artifacts/vertex-proxy/src/core/: __init__.py  auth.py  config.py  constants.py  errors.py  types.py
artifacts/vertex-proxy/src/stream/: __init__.py  parser.py  processor.py
artifacts/vertex-proxy/src/utils/: __init__.py  error_logger.py  logger.py  string_utils.py  token_counter.py
artifacts/vertex-proxy/static/: admin.html
attached_assets/: 新建_文本文档_1776491603342.txt  新建_文本文档_1776496148217.txt
